src/objects/Email_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>CDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>News_ID__c</fullName>
        <externalId>true</externalId>
        <label>News ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_of_Email_DL_s__c</fullName>
        <description>To set the order of email dl&apos;s in &apos;add/remove email dist&apos; lightning component.</description>
        <label>Order of Email DL&apos;s</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Alert</fullName>
                </value>
                <value>
                    <fullName>Commercial Mortgage Alert</fullName>
                </value>
                <value>
                    <fullName>Asset-Backed Alert</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>US Research + REIT Data</fullName>
                </value>
                <value>
                    <fullName>US Research + Market Data &amp; Deals</fullName>
                </value>
                <value>
                    <fullName>Pan-European Research + Market Data &amp; Deals</fullName>
                </value>
                <value>
                    <fullName>Pan-European Research + REIT Data</fullName>
                </value>
                <value>
                    <fullName>US Portfolio Tools</fullName>
                </value>
                <value>
                    <fullName>US REA</fullName>
                </value>
                <value>
                    <fullName>Canada Research + REIT data</fullName>
                </value>
                <value>
                    <fullName>EUR REA</fullName>
                    <isActive>false</isActive>
                    <label>EUR REA</label>
                </value>
                <value>
                    <fullName>EUR REIT</fullName>
                    <isActive>false</isActive>
                    <label>EUR REIT</label>
                </value>
                <value>
                    <fullName>NEWS - ABAlert</fullName>
                    <isActive>false</isActive>
                    <label>NEWS - ABAlert</label>
                </value>
                <value>
                    <fullName>NEWS - CMAlert</fullName>
                    <isActive>false</isActive>
                    <label>NEWS - CMAlert</label>
                </value>
                <value>
                    <fullName>NEWS - HFAlert</fullName>
                    <isActive>false</isActive>
                    <label>NEWS - HFAlert</label>
                </value>
                <value>
                    <fullName>US REIT</fullName>
                    <isActive>false</isActive>
                    <label>US REIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>